--- a/src/main/resources/templates/403.html
+++ b/src/main/resources/templates/403.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>403 Page</title>
+    <link rel="stylesheet" href="css.css">
 </head>
 <body>
 <h2>403 Error: Access denied</h2>
