--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8" />
     <title>Index Page</title>
+    <link  th:href="@{/css/a.css}" rel="stylesheet" />
 </head>
+
 <body>
 Logged user: <span th:text="${#request.userPrincipal}"></span>
 Roles: <span th:text="${#request.userPrincipal.principal.authorities}"></span>
