--- a/src/main/resources/templates/admin/create.html
+++ b/src/main/resources/templates/admin/create.html
@@ -1,44 +1,114 @@
-<!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<!doctype html>
+<html lang="vi" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Create note</title>
+    <title>Create User</title>
+    <th:block th:include="/admin/layout :: headerfiles"></th:block>
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 -->
+    <!--[if lt IE 9]>
+    <script src="admin/js/html5shiv.js"></script>
+    <script src="admin/js/respond.min.js"></script>
+    <script src="admin/js/lte-ie7.js"></script>
+    <![endif]-->
 </head>
 <body>
-<h1>Create note</h1>
-<p>
-    <a href="/admin/list">Note list</a>
-</p>
-<th:block th:if="${message}">
-    <p th:text="${message}"></p>
-</th:block>
-<form th:action="@{/admin/create-user}" th:object="${user}" method="post">
-    <table>
-        <tr>
-            <td>User Name:</td>
-            <td><input type="text" th:field="*{username}"/></td>
-        </tr>
-        <tr>
-            <td>password:</td>
-            <td><input type="text" th:field="*{password}"/></td>
-        </tr>
-        <tr>
-            <td>nickname:</td>
-            <td><input type="text" th:field="*{nickname}"/></td>
-        </tr>
-        <tr>
-            <td>role:</td>
-            <td>
-                <select th:field="*{role}">
-                    <option th:each="p : ${roles}" th:value="${p.name}" th:text="${p.name}"></option>
-                </select>
-            </td>
-        </tr>
-        <tr>
-            <td></td>
-            <td><input type="submit" value="Create note"></td>
-        </tr>
-    </table>
-</form>
+<!-- container section start -->
+<section id="container" class="">
+    <header th:replace="/admin/layout :: header"></header>
+    <aside th:replace="/admin/layout :: aside"></aside>
+    <!--main content start-->
+    <section id="main-content">
+        <section class="wrapper">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h3 class="page-header"><i class="fa fa-files-o"></i> Creat User</h3>
+                    <ol class="breadcrumb">
+                        <li><i class="fa fa-home"></i><a href="/admin">Home</a></li>
+                        <li><i class="icon_document_alt"></i>Users</li>
+                        <li><i class="fa fa-files-o"></i>Creat User</li>
+                    </ol>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <section class="panel">
+                        <header class="panel-heading">
+                            Creat User
+                        </header>
+                        <div class="panel-body">
+                            <div class="form">
+                                <form class="form-validate form-horizontal " id="register_form"
+                                      th:action="@{/admin/create-user}" th:object="${user}" method="post">
+                                    <div class="form-group ">
+                                        <label for="fullname" class="control-label col-lg-2">Full name <span
+                                                class="required">*</span></label>
+                                        <div class="col-lg-10">
+                                            <input th:field="*{nickname}" class=" form-control" id="fullname"
+                                                   name="fullname" type="text"/>
+                                        </div>
+                                    </div>
+                                    <!--<div class="form-group ">-->
+                                    <!--<label for="address" class="control-label col-lg-2">Address <span class="required">*</span></label>-->
+                                    <!--<div class="col-lg-10">-->
+                                    <!--<input class=" form-control" id="address" name="address" type="text" />-->
+                                    <!--</div>-->
+                                    <!--</div>-->
+                                    <div class="form-group ">
+                                        <label for="username" class="control-label col-lg-2">Username <span
+                                                class="required">*</span></label>
+                                        <div class="col-lg-10">
+                                            <input th:field="*{username}" class="form-control " id="username"
+                                                   name="username" type="text"/>
+                                        </div>
+                                    </div>
+                                    <div class="form-group ">
+                                        <label for="password" class="control-label col-lg-2">Password <span
+                                                class="required">*</span></label>
+                                        <div class="col-lg-10">
+                                            <input th:field="*{password}" class="form-control " id="password"
+                                                   name="password" type="password"/>
+                                        </div>
+                                    </div>
+                                    <div class="form-group ">
+                                        <label for="confirm_password" class="control-label col-lg-2">Confirm Password
+                                            <span class="required">*</span></label>
+                                        <div class="col-lg-10">
+                                            <input class="form-control " id="confirm_password" name="confirm_password"
+                                                   type="password"/>
+                                        </div>
+                                    </div>
+                                    <div class="form-group ">
+                                        <label for="email" class="control-label col-lg-2">Email <span
+                                                class="required">*</span></label>
+                                        <div class="col-lg-10">
+                                            <input th:field="*{email}" class="form-control " id="email" name="email"
+                                                   type="email"/>
+                                        </div>
+                                    </div>
+                                    <!--<div class="form-group ">-->
+                                    <!--<label for="agree" class="control-label col-lg-2 col-sm-3">Agree to Our Policy <span class="required">*</span></label>-->
+                                    <!--<div class="col-lg-10 col-sm-9">-->
+                                    <!--<input type="checkbox" style="width: 20px" class="checkbox form-control" id="agree" name="agree" />-->
+                                    <!--</div>-->
+                                    <!--</div>-->
+                                    <div class="form-group">
+                                        <div class="col-lg-offset-2 col-lg-10">
+                                            <button class="btn btn-primary" type="submit">Save</button>
+                                            <button class="btn btn-default" type="button">Cancel</button>
+                                        </div>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </section>
+                </div>
+            </div>
+            <!-- page end-->
+        </section>
+    </section>
+    <!--main content end-->
+</section>
+<th:block th:replace="/admin/layout :: js"></th:block>
+<!--custome script for all page-->
+<script src="/admin/js/scripts.js"></script>
 </body>
 </html>
