--- a/src/main/resources/templates/blog/list.html
+++ b/src/main/resources/templates/blog/list.html
@@ -5,19 +5,26 @@
     <title>Blogs</title>
 </head>
 <body>
+<a href="/admin/list">User list</a>
 <a href="/blogs">Blog</a>
 <p>
     <a href="/create-blog">Create new blog</a>
 </p>
 <form>
-    Search by title:
+    Search by:
     <input name="blog" type="text">
+    <select name="selection">
+        <option value="author">Author</option>
+        <option value="title">Title</option>
+        <option value="tag">Tag</option>
+    </select>
     <input type="submit" value="Search">
 </form><br/>
 <table border="1">
     <tr>
         <th>Author name</th>
         <th>Title</th>
+        <th>Tag</th>
         <th>Date</th>
         <th>View</th>
         <th>Edit</th>
@@ -27,6 +34,7 @@
         <tr>
             <td th:text="${blogs.author_name}"></td>
             <td th:text="${blogs.title}"></td>
+            <td th:text="${blogs.tags}"></td>
             <td th:text="${blogs.date}"></td>
             <td><a th:href="@{/view-blog/__${blogs.id}__}">View</a></td>
             <td><a th:href="@{/edit-blog/__${blogs.id}__ }">Edit</a></td>
