--- a/src/main/resources/templates/admin/list.html
+++ b/src/main/resources/templates/admin/list.html
@@ -1,46 +1,78 @@
-<!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<!doctype html>
+<html lang="vi" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <title>List User</title>
+    <th:block th:include="/admin/layout :: headerfiles"></th:block>
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 -->
+    <!--[if lt IE 9]>
+    <script src="admin/js/html5shiv.js"></script>
+    <script src="admin/js/respond.min.js"></script>
+    <script src="admin/js/lte-ie7.js"></script>
+    <![endif]-->
 </head>
 <body>
-<a href="/admin/create-user">Create new note</a>
-<h1>Note</h1>
-<form>
-    Search by name:
-    <input name="s" type="text"/>
-    <input type="submit" value="Search"/>
-</form>
-<br/>
-<div>
-    <a th:href="@{'admin/list'(page=${user.number - 1})}" th:if="${users.hasPrevious()}">Previous</a>
-    <span th:text="${users.number + 1}"></span>/<span th:text="${users.totalPages}"></span>
-    <a th:href="@{'admin/list'(page=${users.number + 1})}" th:if="${users.hasNext()}">Next</a>
-</div>
-<table border="1">
-    <tr>
-        <th>id</th>
-        <th>image</th>
-        <th>nick name</th>
-        <th>email</th>
-        <th>user name</th>
-        <th>role</th>
-        <th>edit</th>
-        <th>Delete</th>
-    </tr>
-    <th:block th:each="user : ${users}">
-        <tr>
-            <td th:text="${user.id}"></td>
-            <td><img width="20px" th:src="${user.img}"></td>
-            <td th:text="${user.email}"></td>
-            <td th:text="${user.nickname}"></td>
-            <td th:text="${user.username}"></td>
-            <td th:text="${user.role}"></td>
-            <td><a th:href="@{/admin/edit-user/__${user.id}__ }">Edit</a></td>
-            <td><a th:href="@{/admin/delete-user/__${user.id}__ }">Delete</a></td>
-        </tr>
-    </th:block>
-</table>
+<!-- container section start -->
+<section id="container" class="">
+    <header th:replace="/admin/layout :: header"></header>
+    <aside th:replace="/admin/layout :: aside"></aside>
+    <!--main content start-->
+    <section id="main-content">
+        <section class="wrapper">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h3 class="page-header"><i class="fa fa-table"></i> Users</h3>
+                    <ol class="breadcrumb">
+                        <li><i class="fa fa-home"></i><a href="/admin">Home</a></li>
+                        <li><i class="fa fa-table"></i>Users</li>
+                    </ol>
+                </div>
+            </div>
+            <!-- page start-->
+            <div class="row">
+                <div class="col-lg-12">
+                    <section class="panel">
+                        <header class="panel-heading">
+                            List Users
+                        </header>
+
+                        <table class="table table-striped table-advance table-hover">
+                            <tbody>
+                            <tr>
+                                <th><i class="icon_profile"></i> Nick name</th>
+                                <!--<th><i class="icon_calendar"></i> Date</th>-->
+                                <th><i class="icon_mail_alt"></i> Email</th>
+                                <th><i class="icon_archive_alt"></i> Username</th>
+                                <!--<th><i class="icon_mobile"></i> Mobile</th>-->
+                                <th><i class="icon_cogs"></i> Action</th>
+                            </tr>
+                            <th:block th:each="user : ${users}">
+                            <tr>
+                                <td th:text="${user.nickname}"></td>
+                                <!--<td>2004-07-06</td>-->
+                                <td th:text="${user.email}"></td>
+                                <td th:text="${user.username}"></td>
+                                <!--<td>176-026-5992</td>-->
+                                <td>
+                                    <div class="btn-group">
+                                        <a class="btn btn-primary" th:href="@{/admin/edit-user/__${user.id}__ }"><i class="icon_pencil-edit_alt"></i></a>
+                                        <!--<a class="btn btn-success" href="#"><i class="icon_check_alt2"></i></a>-->
+                                        <a class="btn btn-danger" th:href="@{/admin/delete-user/__${user.id}__ }"><i class="icon_close_alt2"></i></a>
+                                    </div>
+                                </td>
+                            </tr>
+                            </th:block>
+                            </tbody>
+                        </table>
+                    </section>
+                </div>
+            </div>
+            <!-- page end-->
+        </section>
+    </section>
+    <!--main content end-->
+</section>
+<th:block th:replace="/admin/layout :: js"></th:block>
+<!--custome script for all page-->
+<script src="/admin/js/scripts.js"></script>
 </body>
 </html>
