--- a/src/main/resources/templates/blog/create.html
+++ b/src/main/resources/templates/blog/create.html
@@ -12,7 +12,7 @@
 </style>
 <h1>Create Blog</h1>
 <p>
-    <a href="/blogs">Blogs list</a>
+    <a href="/blog">Blogs list</a>
 </p>
 <th:block th:if="${message}">
     <p th:text="${message}"></p>
