--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,6 +5,8 @@
     <title>Title</title>
 </head>
 <body>
+<header th:replace="/layout :: navmenu"></header>
+
 <table>
     <table border="1">
         <tr>
