--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -10,48 +10,38 @@
     <title>TripleT Blog</title>
     <th:block th:fragment="headerfile">
         <!-- Bootstrap core CSS -->
-        <link href="/home/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+        <link href="/static/admin/css/bootstrap.min.css" rel="stylesheet">
 
         <!-- Custom fonts for this template -->
         <link href="/home/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
         <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
         <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
 
-        <!-- Custom styles for this template -->
-        <link href="/home/css/clean-blog.min.css" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="/admin/css/reset.css">
+        <link rel="stylesheet" type="text/css" href="/admin/css/reposive.css">
     </th:block>
 
 </head>
 
 <body>
 <!-- Navigation -->
-<nav th:fragment="navmenu" class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
-    <div class="container">
-        <a class="navbar-brand" href="index.html">TripleT Blog</a>
-        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-            Menu
-            <i class="fas fa-bars"></i>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="index.html">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="about.html">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/user/info" th:text="${#request.userPrincipal.principal.username}"></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="post.html">Sample Post</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact</a>
-                </li>
-            </ul>
+<nav th:fragment="navmenu">
+    <header>
+        <div class="wrapper">
+            <a href="#"><img src="" class="logo" alt="" titl=""/></a>
+            <a href="#" class="hamburger"></a>
+            <nav>
+                <ul>
+                    <li><a href="#">Buy</a></li>
+                    <li><a href="#">Rent</a></li>
+                    <li><a href="#">Sell</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+                <a href="#" class="login_btn">Login</a>
+            </nav>
         </div>
-    </div>
+    </header>
 </nav>
 <!-- Page Header -->
 <header th:fragment="pageheader" class="masthead" style="background-image: url('img/home-bg.jpg')">
